--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -59,6 +59,8 @@
       <div class="products-grid js-products-grid"></div>
     </div>
   </body>
+
+  <script src="./data/cart.js"></script>
   <script src="./data/products.js"></script>
   <script src="./script/amazon.js"></script>
 </html>
