--- a/javascript-amazon-project-main/checkout.html
+++ b/javascript-amazon-project-main/checkout.html
@@ -85,6 +85,29 @@
         </div>
       </div>
     </div>
+    <div class="delivery-option">
+    <input
+      type="radio"
+      class="delivery-option-input"
+      name="delivery-option-${matchingProduct.id}"
+    />
+    <div>
+      <div class="delivery-option-date">${deliveryDate}</div>
+      <div class="delivery-option-price">$4.99 - Shipping</div>
+    </div>
+  </div>
+  <div class="delivery-option">
+    <input
+      type="radio"
+      class="delivery-option-input"
+      name="delivery-option-${matchingProduct.id}"
+    />
+    <div>
+      <div class="delivery-option-date">${deliveryDate}</div>
+      <div class="delivery-option-price">$9.99 - Shipping</div>
+    </div>
+  </div>
+</div>
   </body>
   <script type="module" src="./script/checkout.js"></script>
 </html>
