--- a/javascript-amazon-project-main/checkout.html
+++ b/javascript-amazon-project-main/checkout.html
@@ -33,10 +33,9 @@
             />
           </a>
         </div>
-
-        <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link" href="amazon.html">3 items</a
-          >)
+<!-- ** -->
+        <div class="checkout-header-middle-section js-checkout-header-middle-section" >
+          
         </div>
 
         <div class="checkout-header-right-section">
